# profunctor-optics

./: README.md  default.nix  flake.nix  overlay.nix  profunctor-optics.cabal
data/: Optics.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/Data/: Optics-Notes.hs  Optics.hs
